--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{% block title %}My Site{% endblock %}</title>
+  <title>{% block title %}MpoxTDB{% endblock %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Bootstrap 5 CSS (Optional) -->
