link api documentation in faq

--- a/frontend/core/templates/core/faq.html
+++ b/frontend/core/templates/core/faq.html
@@ -82,7 +82,7 @@
       <div class="faq-item">
         <button class="faq-question">Is there an Application Program Interface (API) for the MpoxTDB? This will allow us to link it to our webserver.</button>
         <div class="faq-answer">
-          <p>We are working on and soon it will be available</p>
+          <p>Yes. Interested users can access our API documentation at <a target="_blank" href="{% url 'api_documentation' %}" >View API documentation</a></p>
         </div>
       </div>
       <div class="faq-item">
